[gd_scene load_steps=2 format=2]

[ext_resource path="res://Music/BeatDetector.gd" type="Script" id=1]

[node name="BeatDetector" type="Node"]
script = ExtResource( 1 )

[node name="MainPlayer" type="AudioStreamPlayer" parent="."]

[node name="BackPlayer" type="AudioStreamPlayer" parent="."]

[node name="PreloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PreloadTimer" to="." method="_on_PreloadTimer_timeout"]
